main-category start

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,32 @@
 
 <body>
     <header></header>
-    <main></main>
+    <main>
+        <section class="main-container">
+            <div class="main-top-filters">
+                <div class="all-categories"></div>
+                <div class="filtes">
+                    <input type="text" class="filter-input">
+                </div>
+                <div class="reset-filters"></div>
+            </div>
+            <div class="main-block">
+                <div class="left-side">
+                    <div class="categories-box">
+                        <ul class="category-list"></ul>
+                    </div>
+                    <div class="populars"></div>
+                </div>
+                <div class="content">
+                    <div class="cards">
+                    </div>
+                    <div class="pagination"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script type="text/javascript" src="./js/testyApiService.js"></script>
+    <script type="text/javascript" src="./js/main-category.js"></script>
 </body>
 
 </html>
