build: Update build system

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,8 @@
             </div>
         </section>
     </main>
-    <script type="text/javascript" src="./js/testyApiService.js"></script>
-    <script type="text/javascript" src="./js/main-category.js"></script>
+    <script type="module" src="./js/testyApiService.js"></script>
+    <script type="module" src="./js/main-category.js"></script>
 </body>
 
 </html>
