js/css: popular

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,14 @@
                 </div>
             </div>
             <div id="popular">
-                <!-- popular -->
+                <div class="populars">
+                    <!-- POPULAR RECEPIES -->
+                    <h2 class="popular-recepies-title">Popular recipes</h2>
+                    <div class="main-popular-recepies">
+                      <ul class="js-popular-recepies list">
+                        
+                      </ul>
+                </div>
             </div>
         </section>
         <section id="content">
@@ -45,6 +52,7 @@
             </div>
         </section>
     </main>
+    <script type="module" src="./js/popular.js"></script>
     <script type="module" src="./js/testyApiService.js"></script>
     <script type="module" src="./js/main-category.js"></script>
 </body>
