main: Update main structure

--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,19 @@
 <body>
     <header></header>
     <main>
-        <section class="main-container-filter">
-            <div class="main-categories">
+        <section id="side-bar">
+            <div id="categories">
                 <button type="button">All categories</button>
                 <div class="categories-box">
                     <ul class="category-list"></ul>
                 </div>
             </div>
-            <div class="main-filters">
+            <div id="popular">
+                <!-- popular -->
+            </div>
+        </section>
+        <section id="content">
+            <div id="content-filters">
                 <div class="filters">
                     <label for="input">Search</label>
                     <input type="text" class="filter-input" id="input">
@@ -33,7 +38,7 @@
                 </div>
                 <div class="reset-filters"></div>
             </div>
-            <div class="content">
+            <div id="content-data">
                 <div class="cards">
                 </div>
                 <div class="pagination"></div>
