--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
         </section>
         <section id="side-bar">
             <div id="categories">
-                <button type="button">All categories</button>
+                <button class="all-category-btn" type="button">All categories</button>
                 <div class="categories-box">
                     <ul class="category-list"></ul>
                 </div>
