--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,15 +3,15 @@
     <div class="block-for-mobile container">
         <nav class="nav">
             <div class="logo-block">
-                <a class="logo-first-color" href="./../index.html">tasty<span
+                <a class="logo-first-color" href="/src/index.html">tasty<span
                         class="logo-second-color">treats.</span></a>
             </div>
             <div class="cart-menu-block">
                 <svg id="header-cart-icon" class="header-cart-icon icon" width="24" height="24">
-                    <use href="./../img/sprite.svg#icon-shopping-cart"></use>
+                    <use href="/src/img/sprite.svg#icon-shopping-cart"></use>
                 </svg>
                 <svg class="header-hamburger-icon icon" id="hamburger" width="32" height="32">
-                    <use href="./../img/sprite.svg#icon-hamburger"></use>
+                    <use href="/src/img/sprite.svg#icon-hamburger"></use>
                 </svg>
             </div>
         </nav>
@@ -22,18 +22,18 @@
     <div class="tablet-desktop container">
         <nav class="tablet-desktop-nav">
             <div class="navigations">
-                <a id="home-link" class="tablet-menu-nav-links" href="./../index.html">Home</a>
-                <a id="favorites-link" class="tablet-menu-nav-links" href="./../favorites.html">Favorites</a>
+                <a id="home-link" class="tablet-menu-nav-links" href="/src/index.html">Home</a>
+                <a id="favorites-link" class="tablet-menu-nav-links" href="/src/favorites.html">Favorites</a>
             </div>
 
             <div class="logo-block">
-                <a class="logo-first-color" href="./../index.html">tasty<span
+                <a class="logo-first-color" href="/src/index.html">tasty<span
                         class="logo-second-color">treats.</span></a>
             </div>
 
             <div class="tablet-desktop-nav-icons">
                 <svg id="cart-icon-desktop" class="header-cart-icon icon" width="24" height="24">
-                    <use href="./../img/sprite.svg#icon-shopping-cart"></use>
+                    <use href="/src/img/sprite.svg#icon-shopping-cart"></use>
                 </svg>
 
                 <svg class="switcher" id="desktop-switch" width="76" viewBox="0 0 76 44" fill="none"
@@ -86,12 +86,12 @@
 <!-- MOBILE MENU MODAL -->
 <div class="mobile-menu">
     <svg class="close-menu-icon icon" id="js-close-menu" width="32" height="32">
-        <use href="./../img/sprite.svg#icon-x"></use>
+        <use href="/src/img/sprite.svg#icon-x"></use>
     </svg>
 
     <div class="mobile-menu-nav">
-        <a id="mobile-home-link" class="mobile-menu-nav-links" href="./../index.html">Home</a>
-        <a id="mobile-favorites-link" class="mobile-menu-nav-links" href="./../favorites.html">Favorites</a>
+        <a id="mobile-home-link" class="mobile-menu-nav-links" href="/src/index.html">Home</a>
+        <a id="mobile-favorites-link" class="mobile-menu-nav-links" href="/src/favorites.html">Favorites</a>
     </div>
 
     <div class="mobile-menu-switcher">
@@ -139,3 +139,4 @@
         </svg>
     </div>
 </div>
+<!-- END  OF  MOBILE  MENU  MODAL -->
