html: Move popular to popular.html

--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,8 @@
                 </div>
             </div>
             <div id="popular">
-                <div class="populars">
-                    <!-- POPULAR RECEPIES -->
-                    <h2 class="popular-recepies-title">Popular recipes</h2>
-                    <div class="main-popular-recepies">
-                        <ul class="js-popular-recepies list">
-
-                        </ul>
-                    </div>
-                </div>
+                <include src="./html/popular.html"></include>
+            </div>
         </section>
         <section id="content">
             <include src="./html/filters-and-content.html"></include>
