index: Extract categories into separate file

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,7 @@
     <main>
         <section id="side-bar">
             <div id="categories">
-                <button class="all-category-btn" type="button">All categories</button>
-                <div class="categories-box">
-                    <ul class="category-list"></ul>
-                </div>
+                <include src="./html/categories.html"></include>
             </div>
             <div id="popular">
                 <include src="./html/popular.html"></include>
