--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,5 @@
 <!-- HEADER FOR MOBILE -->
+<link rel="stylesheet" href="/src/styles/header.css" />
 <header class="header">
     <div class="block-for-mobile container">
         <nav class="nav">
