--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
     <section id="hero-section">
         <include src="./html/hero.html"></include>
     </section>
+    <section id="hero-section">
+        <!-- loaded from ./html/hero.html by jquery-->
+    </section>
+    <section id="hero-section">
+        <!-- loaded from ./html/hero.html by jquery-->
+    </section>
     <main>
         <section id="side-bar">
             <div id="categories">
