commit-lera-favourit

--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
-
+    <!-- <link rel="stylesheet" href="../src/styles/favor-body.css" /> -->
     <title>Document</title>
 </head>
 
@@ -23,11 +23,16 @@
                 <use href="./img/sprite.svg#fav-icon"></use>
             </svg>
 
-            <p class="favorites-text">
+
+            <div class="categories-box-favourites">
+                <ul class="category-list-favourites"></ul>
+            </div>
+
+            <!-- <p class="favorites-text">
                 It appears that you haven't added any recipes to your favorites yet.
                 To get started, you can add recipes that you like to your favorites
                 for easier access in the future.
-            </p>
+            </p> -->
         </div>
     </section>
     <section class="tags">
@@ -54,5 +59,4 @@
     </section>
     <script type="module" src="./favorites.js"></script>
 </body>
-
 </html>
