--- a/src/favorites.html
+++ b/src/favorites.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base href="/">
-    <!-- <link rel="stylesheet" href="../src/styles/favor-body.css" /> -->
+    <link rel="stylesheet" href="../src/styles/favor-body.css" />
     <title>Document</title>
 </head>
 
@@ -24,10 +24,7 @@
             </svg>
 
 
-            <div class="categories-box-favourites">
-                <ul class="category-list-favourites"></ul>
-            </div>
-
+            
             <!-- <p class="favorites-text">
                 It appears that you haven't added any recipes to your favorites yet.
                 To get started, you can add recipes that you like to your favorites
@@ -44,6 +41,9 @@
                     </button>
                 </li>
             </ul>
+            <div class="categories-box-favourites">
+                <ul class="category-list-favourites"></ul>
+            </div>
         </div>
     </section>
     <section class="favorites-gallery">
@@ -56,6 +56,17 @@
                 <div class="tui-pagination" id="pagination"></div>
             </div>
         </div>
+        <ul class="page-change-favourite-list">
+            <li class="page-change-favourite"> <button class="btn-page-change dark-btn-favourites"></button></li>
+            <li class="page-change-favourite"> <button class="btn-page-change dark-btn-favourites"></button></li>
+<div class="btn-num-favourites">
+            <li class="page-change-favourite"> <button class="btn-page-change">1</button></li>
+            <li class="page-change-favourite"> <button class="btn-page-change">2</button></li>
+            <li class="page-change-favourite"> <button class="btn-page-change">...</button></li>
+</div>
+            <li class="page-change-favourite"> <button class="btn-page-change green-btn-favourites"></button></li>
+            <li class="page-change-favourite"> <button class="btn-page-change green-btn-favourites"></button></li>
+        </ul>
     </section>
     <script type="module" src="./favorites.js"></script>
 </body>
