Adding modals functionality
Simple code, css and html for all 3 popups

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
     </section>
     <section id="hero-section">
       <!-- loaded from ./html/hero.html by jquery-->
+      <!-- ADD MODAL START -->
+      <include src="./html/modal-order-now.html"></include>
+      <include src="./html/modal-give-rating.html"></include>
+      <include src="./html/modal-recipe.html"></include>
+      <!-- ADD MODAL END -->
     </section>
     <section id="hero-section">
       <!-- loaded from ./html/hero.html by jquery-->
@@ -45,6 +50,9 @@
     <script type="module" src="./js/popular.js" defer></script>
     <script type="module" src="./js/testyApiService.js" defer></script>
     <script type="module" src="./js/main-category.js" defer></script>
+    <script type="module" src="./js/modal-order-now.js" defer></script>
+    <script type="module" src="./js/modal-give-rating.js" defer></script>
+    <script type="module" src="./js/modal-recipe.js" defer></script>
     <script type="module" src="./js/hero-slider.js" defer></script>
   </body>
 </html>
