--- a/src/index.html
+++ b/src/index.html
@@ -17,32 +17,23 @@
     <section id="header-section">
       <include src="./html/header.html"></include>
     </section>
-    <section id="hero-section">
-      <include src="./html/hero.html"></include>
-    </section>
-    <section id="hero-section">
-      <!-- loaded from ./html/hero.html by jquery-->
-      <!-- ADD MODAL START -->
-      <include src="./html/modal-order-now.html"></include>
-      <include src="./html/modal-give-rating.html"></include>
-      <include src="./html/modal-recipe.html"></include>
-      <!-- ADD MODAL END -->
-    </section>
-    <section id="hero-section">
-      <!-- loaded from ./html/hero.html by jquery-->
-    </section>
     <main>
-      <section id="side-bar">
-        <div id="categories">
-          <include src="./html/categories.html"></include>
-        </div>
-        <div id="popular">
-          <include src="./html/popular.html"></include>
-        </div>
+      <section id="hero-section">
+        <include src="./html/hero.html"></include>
       </section>
-      <section id="content">
-        <include src="./html/filters-and-content.html"></include>
-      </section>
+      <div class="main-div">
+        <section id="side-bar">
+          <div id="categories">
+            <include src="./html/categories.html"></include>
+          </div>
+          <div id="popular">
+            <include src="./html/popular.html"></include>
+          </div>
+        </section>
+        <section id="content">
+          <include src="./html/filters-and-content.html"></include>
+        </section>
+      </div>
     </main>
 
     <script type="module" src="./js/header.js" defer></script>
