all: Update based on review

--- a/src/html/categories.html
+++ b/src/html/categories.html
@@ -1,4 +1,6 @@
-<button class="all-category-btn" type="button">All categories</button>
-<div class="categories-box">
-    <ul class="category-list"></ul>
+<div id="categories">
+    <button class="all-category-btn" type="button">All categories</button>
+    <div class="categories-box">
+        <ul class="category-list"></ul>
+    </div>
 </div>
