--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -1,18 +1,20 @@
-<div id="content-filters">
-    <div class="filters">
-        <label for="input">Search</label>
-        <input type="text" class="filter-input" id="input">
-        <label for="select-time">Time</label>
-        <select class="time" id="select-time"></select>
-        <label for="select-area">Area</label>
-        <select class="area" id="select-area"></select>
-        <label for="select-ingredients">Ingredients</label>
-        <select class="ingrediends" id="select-ingredients"></select>
+<section id="content">
+    <div id="content-filters">
+        <div class="filters">
+            <label for="input">Search</label>
+            <input type="text" class="filter-input" id="input">
+            <label for="select-time">Time</label>
+            <select class="time" id="select-time"></select>
+            <label for="select-area">Area</label>
+            <select class="area" id="select-area"></select>
+            <label for="select-ingredients">Ingredients</label>
+            <select class="ingrediends" id="select-ingredients"></select>
+        </div>
+        <div class="reset-filters"></div>
     </div>
-    <div class="reset-filters"></div>
-</div>
-<div id="content-data">
-    <div class="cards">
+    <div id="content-data">
+        <div class="cards">
+        </div>
+        <div class="pagination"></div>
     </div>
-    <div class="pagination"></div>
-</div>
+</section>
