--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,5 @@
 <!-- HEADER FOR MOBILE -->
-<link rel="stylesheet" href="/src/styles/header.css" />
-<header class="header">
+<header class="header" id="header-section">
     <div class="block-for-mobile container">
         <nav class="nav">
             <div class="logo-block">
