--- a/src/html/popular.html
+++ b/src/html/popular.html
@@ -1,9 +1,11 @@
 <!-- POPULAR RECEPIES -->
-<div class="populars">
-    <h2 class="popular-recepies-title">Popular recipes</h2>
-    <div class="main-popular-recepies">
-        <ul class="js-popular-recepies list">
+<div id="popular">
+    <div class="populars">
+        <h2 class="popular-recepies-title">Popular recipes</h2>
+        <div class="main-popular-recepies">
+            <ul class="js-popular-recepies list">
 
-        </ul>
+            </ul>
+        </div>
     </div>
 </div>
